# AGC

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: PITCH_DECK.md
geos/: __init__.py  cli.py  config.py
geos/agents/: __init__.py  base.py  commodity_agent.py  geopolitical_agent.py  maritime_agent.py  orchestrator.py  policy_agent.py  predictive_agent.py  procurement_agent.py  reserve_agent.py  sanctions_agent.py  scenario_agent.py
geos/analytics/: __init__.py  benchmark.py
geos/api/: __init__.py  copilot.py  server.py
geos/causal/: __init__.py  scm.py
geos/data/: __init__.py  events.py  live_feed.py  seed_data.py
geos/knowledge_graph/: __init__.py  graph.py
geos/ml/: __init__.py  forecaster.py  gnn.py
geos/neri/: __init__.py  index.py
geos/optim/: __init__.py  game_theory.py  reserve_dp.py
geos/scenario/: __init__.py  montecarlo.py
tests/: test_advanced.py  test_agents.py  test_api.py  test_causal.py  test_graph.py  test_live_benchmark.py  test_neri.py  test_scenario.py
web/: app.js  index.html  landing.html  login.html  site.css  styles.css
